--- a/app/src/main/res/layout/fragment_view_about.xml
+++ b/app/src/main/res/layout/fragment_view_about.xml
@@ -42,11 +42,19 @@
     <TextView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:text="New Text"
+            android:id="@+id/textVersion" android:layout_below="@+id/imageView3" android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" style="@style/AppTheme.Header.Sub"/>
+    <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="Attributation"
-            android:id="@+id/textView5" android:layout_below="@+id/imageView3" android:layout_alignParentLeft="true"
+            android:id="@+id/textView5" android:layout_below="@+id/textVersion" android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" style="@style/AppTheme.Header"/>
     <us.feras.mdv.MarkdownView android:layout_width="match_parent"
                                android:layout_height="wrap_content" android:layout_below="@+id/textView5"
-                               android:layout_alignParentLeft="true" android:layout_alignParentStart="true"></us.feras.mdv.MarkdownView>
+                               android:layout_alignParentLeft="true" android:layout_alignParentStart="true"
+                               android:id="@+id/markdownAttributation"></us.feras.mdv.MarkdownView>
+
 </RelativeLayout>
