--- a/app/src/main/res/layout/fragment_event_card.xml
+++ b/app/src/main/res/layout/fragment_event_card.xml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                     android:layout_width="match_parent"
-                                    android:layout_height="wrap_content">
+                                    android:layout_height="90dp"
+                                    xmlns:app="http://schemas.android.com/apk/res-auto"
+                                    app:cardBackgroundColor="@color/primaryLighter"
+                                    app:cardCornerRadius="2dp"
+                                    app:cardElevation="2dp"
+                                    app:cardUseCompatPadding="true">
     <LinearLayout android:layout_width="match_parent"
-                  android:layout_height="75dp"
-                  android:orientation="horizontal" android:weightSum="10"
-                  android:background="@color/primaryLight">
+                  android:layout_height="match_parent"
+                  android:orientation="horizontal" android:weightSum="10">
         <ImageView android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
