--- a/app/src/main/res/layout/fview_info_groups.xml
+++ b/app/src/main/res/layout/fview_info_groups.xml
@@ -8,7 +8,7 @@
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:context="org.eurofurence.connavigator.ui.FragmentViewInfoGroups"
         android:id="@+id/mainActivityLayout"
-        android:background="@android:color/background_light">
+        android:background="@color/backgroundGrey">
 
     <android.support.v7.widget.RecyclerView
             android:layout_width="match_parent"
