Added event owner formatting

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,5 +12,5 @@
     <color name="accentDarker">#0976C3</color>
     <color name="textWhite">#dcdcdc</color>
     <color name="textBlack">#111</color>
-    <color name="backgroundGrey">#BBB</color>
+    <color name="backgroundGrey">#DDD</color>
 </resources>
