--- a/app/src/main/res/layout/fview_event.xml
+++ b/app/src/main/res/layout/fview_event.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<android.support.design.widget.CoordinatorLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -29,7 +29,8 @@
                           android:layout_height="wrap_content"
                           android:background="@color/primaryDarker"
                           android:padding="@dimen/outer_padding"
-                          android:orientation="vertical">
+                          android:orientation="vertical"
+                          android:id="@+id/splitter">
                 <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -73,7 +74,15 @@
                     android:layout_height="wrap_content"
                     android:text="New Text"
                     android:id="@+id/description"
-                    android:padding="@dimen/outer_padding"/>
+                    android:layout_margin="25dp"/>
         </LinearLayout>
     </ScrollView>
-</RelativeLayout>
+    <android.support.design.widget.FloatingActionButton android:layout_width="wrap_content"
+                                                        android:layout_height="wrap_content"
+                                                        android:layout_margin="16dp"
+                                                        android:src="@drawable/ic_menu_share"
+                                                        android:clickable="true"
+                                                        app:layout_anchor="@id/splitter"
+                                                        app:layout_anchorGravity="bottom|right|end"
+                                                        android:id="@+id/buttonSave"/>
+</android.support.design.widget.CoordinatorLayout>
