--- a/app/src/main/res/layout/fragment_event_card.xml
+++ b/app/src/main/res/layout/fragment_event_card.xml
@@ -4,7 +4,8 @@
                                     android:layout_height="wrap_content"
                                     xmlns:app="http://schemas.android.com/apk/res-auto"
                                     android:layout_marginBottom="5dp"
-                                    app:cardUseCompatPadding="true">
+                                    app:cardUseCompatPadding="true"
+                                    android:id="@+id/eventCard">
     <LinearLayout android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:orientation="horizontal" android:weightSum="10">
