You can now receive pending intents. Manual testing has confirmed that you can also cancel events.

--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -14,4 +14,12 @@
                 android:entries="@array/polling_intervals"
                 android:defaultValue="50"/>
     </PreferenceCategory>
+    <PreferenceCategory
+            android:title="Debug Notifications">
+        <CheckBoxPreference
+                android:key="@string/debug_notifications_schedule"
+                android:title="Schedule notifications for testing"
+                android:summary="Schedules a notification in the near future for testing"
+                android:defaultValue="false"/>
+    </PreferenceCategory>
 </PreferenceScreen>
