--- a/app/src/main/res/layout/fview_home.xml
+++ b/app/src/main/res/layout/fview_home.xml
@@ -1,25 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
-    <TextView android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:text="Your favourited events"
-              android:padding="@dimen/outer_padding"
-              android:textAppearance="?android:textAppearanceLarge"/>
-    <android.support.v4.view.ViewPager android:layout_width="match_parent"
-                                       android:layout_height="110dp"
-                                       android:id="@+id/favoritedViewPager">
+<RelativeLayout android:layout_height="match_parent"
+                android:layout_width="match_parent"
+                xmlns:android="http://schemas.android.com/apk/res/android">
+    <ScrollView android:layout_height="match_parent"
+                android:layout_width="match_parent"
+                xmlns:android="http://schemas.android.com/apk/res/android">
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                      android:orientation="vertical"
+                      android:layout_width="match_parent"
+                      android:layout_height="match_parent">
+            <TextView android:layout_width="match_parent"
+                      android:layout_height="wrap_content"
+                      android:text="Your favourited events"
+                      android:padding="@dimen/outer_padding"
+                      android:textAppearance="?android:textAppearanceLarge"/>
+            <android.support.v4.view.ViewPager android:layout_width="match_parent"
+                                               android:layout_height="110dp"
+                                               android:id="@+id/favoritedViewPager">
 
-    </android.support.v4.view.ViewPager>
+            </android.support.v4.view.ViewPager>
 
-    <TextView android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:text="Latest Announcements"
-              android:padding="@dimen/outer_padding"
-              android:textAppearance="?android:textAppearanceMedium"/>
-    <TextView android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:text="Todo"/>
-</LinearLayout>
+            <TextView android:layout_width="match_parent"
+                      android:layout_height="wrap_content"
+                      android:text="Latest Announcements"
+                      android:padding="@dimen/outer_padding"
+                      android:textAppearance="?android:textAppearanceLarge"/>
+            <ScrollView android:layout_width="match_parent"
+                        android:layout_height="150dp"
+                        android:background="@color/cardview_light_background">
+                <android.support.v7.widget.RecyclerView android:layout_width="match_parent"
+                                                        android:layout_height="match_parent"
+                                                        android:id="@+id/announcementsRecycler"/>
+            </ScrollView>
+        </LinearLayout>
+    </ScrollView>
+</RelativeLayout>
