User can now click on dealer

--- a/app/src/main/res/layout/fragment_dealer.xml
+++ b/app/src/main/res/layout/fragment_dealer.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="75dp">
+                android:layout_height="75dp" android:id="@+id/layout">
     <ImageView android:layout_width="75dp" android:layout_height="match_parent"
                android:src="@drawable/placeholder_event"
                android:scaleType="centerCrop"
