--- a/app/src/main/res/layout/fview_dealer.xml
+++ b/app/src/main/res/layout/fview_dealer.xml
@@ -3,7 +3,9 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:background="@color/backgroundGrey">
-    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
+              android:background="@color/backgroundGrey"
+              android:clickable="true">
+    <TextView android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
               android:id="@+id/dealerName"/>
 </LinearLayout>
