--- a/app/src/main/res/layout/fview_event.xml
+++ b/app/src/main/res/layout/fview_event.xml
@@ -7,7 +7,8 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:context="org.eurofurence.connavigator.ui.EventActivity"
-        android:background="@android:color/background_light">
+        android:background="@android:color/background_light"
+        android:clickable="true">
 
     <ScrollView
             android:layout_width="match_parent"
