--- a/app/src/main/res/layout/fview_info.xml
+++ b/app/src/main/res/layout/fview_info.xml
@@ -9,7 +9,7 @@
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:context="org.eurofurence.connavigator.ui.FragmentViewInfo"
         android:id="@+id/eventActivityLayout"
-
+        android:clickable="true"
         android:background="@color/backgroundGrey">
 
     <ImageView
