Fixed favoriter to actually give updates on time instead of 5secs into the future every time
Added top padding to events viewpager and event page so compensate for the tabhost

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,4 +11,5 @@
     <dimen name="image_height">150dp</dimen>
     <dimen name="outer_padding">15dp</dimen>
     <dimen name="inner_padding">10dp</dimen>
+    <dimen name="tabhost_height">45dp</dimen>
 </resources>
