--- a/app/src/main/res/layout/fview_events_viewpager.xml
+++ b/app/src/main/res/layout/fview_events_viewpager.xml
@@ -8,5 +8,6 @@ android:background="@color/backgroundGrey">
     <android.support.v4.view.ViewPager android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:id="@+id/eventPager"
+                                       android:layout_marginTop="@dimen/tabhost_height"
                                        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 </LinearLayout>
