--- a/app/src/main/res/layout/fview_dealer.xml
+++ b/app/src/main/res/layout/fview_dealer.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent" android:layout_height="match_parent"
-        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
+        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:background="@android:color/background_light">
     <ScrollView android:layout_width="match_parent" android:layout_height="match_parent">
         <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -46,6 +47,7 @@
     </ScrollView>
     <android.support.design.widget.FloatingActionButton android:layout_width="wrap_content"
                                                         android:layout_height="wrap_content"
+                                                        android:src="@drawable/icon_link"
                                                         android:id="@+id/dealerButtonMore"
                                                         android:layout_margin="@dimen/inner_padding"
                                                         app:layout_anchor="@id/dealerHeaderLayout"
