--- a/app/src/main/res/layout/fragment_event_card.xml
+++ b/app/src/main/res/layout/fragment_event_card.xml
@@ -9,25 +9,19 @@
     <LinearLayout android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:orientation="horizontal" android:weightSum="10">
-        <ImageView android:layout_width="100dp"
-                   android:layout_height="match_parent"
-                   android:layout_weight="3"
-                   android:src="@drawable/placeholder_event"
-                   android:scaleType="centerCrop"
-                   android:id="@+id/eventImage"/>
-        <LinearLayout android:layout_width="match_parent"
+        <LinearLayout android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
-                      android:layout_weight="7"
+                      android:layout_weight="9"
                       android:orientation="vertical"
                       android:padding="@dimen/outer_padding">
-            <TextView android:layout_width="match_parent"
+            <TextView android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="Title"
                       android:textAppearance="?android:textAppearanceLarge"
                       android:id="@+id/eventTitle"
                       android:singleLine="true"
                       android:paddingBottom="@dimen/inner_padding"/>
-            <TextView android:layout_width="match_parent"
+            <TextView android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="Times"
                       android:id="@+id/eventDate"
@@ -35,5 +29,11 @@
                       android:textAppearance="?android:textAppearanceMedium"/>
 
         </LinearLayout>
+        <ImageView android:layout_width="100dp"
+                   android:layout_height="match_parent"
+                   android:layout_weight="1"
+                   android:src="@drawable/placeholder_event"
+                   android:scaleType="centerCrop"
+                   android:id="@+id/eventImage"/>
     </LinearLayout>
 </android.support.v7.widget.CardView>
