--- a/app/src/main/res/layout/fview_info.xml
+++ b/app/src/main/res/layout/fview_info.xml
@@ -1,34 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:context="org.eurofurence.connavigator.ui.FragmentViewInfo"
-        android:id="@+id/eventActivityLayout"
-        android:clickable="true"
-        android:background="@color/backgroundGrey">
-
-    <ImageView
+<ScrollView android:layout_height="match_parent" android:layout_width="match_parent"
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:background="@android:color/background_light">
+    <LinearLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:id="@+id/image"
-            android:src="@drawable/placeholder_event"
-            android:contentDescription="Info image"/>
+            android:layout_height="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            tools:context="org.eurofurence.connavigator.ui.FragmentViewInfo"
+            android:id="@+id/eventActivityLayout"
+            android:clickable="true"
+    >
 
-    <TextView
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="Medium Text"
-            style="@style/AppTheme.Header"
-            android:id="@+id/title"/>
+        <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:id="@+id/image"
+                android:src="@drawable/placeholder_event"
+                android:contentDescription="Info image"/>
 
-    <us.feras.mdv.MarkdownView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/text"/>
-</LinearLayout>
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLargeInverse"
+                android:text="Medium Text"
+                style="@style/AppTheme.Header"
+                android:id="@+id/title"/>
+
+        <us.feras.mdv.MarkdownView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/text"
+                android:layout_margin="@dimen/outer_padding"/>
+    </LinearLayout>
+</ScrollView>
