--- a/app/src/main/res/layout/activity_root.xml
+++ b/app/src/main/res/layout/activity_root.xml
@@ -19,42 +19,43 @@
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-
-        <!-- Main layout widget -->
-        <android.support.design.widget.AppBarLayout
-                android:layout_height="wrap_content"
-                android:layout_width="match_parent"
-                android:theme="@style/AppTheme.AppBarOverlay"
-                android:fitsSystemWindows="true"
-        android:id="@+id/appbar">
-
-            <!-- Toolbar of the app -->
-            <android.support.v7.widget.Toolbar
-                    android:id="@+id/toolbar"
-                    android:layout_width="match_parent"
+        <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
+                      android:orientation="vertical">
+            <!-- Main layout widget -->
+            <android.support.design.widget.AppBarLayout
                     android:layout_height="wrap_content"
-                    android:background="?attr/colorPrimary"
+                    android:layout_width="match_parent"
+                    android:theme="@style/AppTheme.AppBarOverlay"
                     android:fitsSystemWindows="true"
-                    app:popupTheme="@style/AppTheme.PopupOverlay"/>
+                    android:id="@+id/appbar">
 
-            <android.support.design.widget.TabLayout
-                    android:id="@+id/tabs"
+                <!-- Toolbar of the app -->
+                <android.support.v7.widget.Toolbar
+                        android:id="@+id/toolbar"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="?attr/colorPrimary"
+                        android:fitsSystemWindows="true"
+                        app:popupTheme="@style/AppTheme.PopupOverlay"/>
+
+                <android.support.design.widget.TabLayout
+                        android:id="@+id/tabs"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:tabGravity="fill"
+                        app:tabIndicatorHeight="6dp"
+                        app:tabMode="fixed"/>
+
+            </android.support.design.widget.AppBarLayout>
+
+            <!-- Content container element -->
+            <FrameLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:tabGravity="fill"
-                    app:tabIndicatorHeight="6dp"
-                    app:tabMode="fixed"/>
-
-        </android.support.design.widget.AppBarLayout>
-
-        <!-- Content container element -->
-        <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/toolbar_height"
-                android:id="@+id/content">
-            <!-- Filled by the root activity -->
-        </FrameLayout>
+                    android:id="@+id/content">
+                <!-- Filled by the root activity -->
+            </FrameLayout>
+        </LinearLayout>
 
         <!-- Additional floating action button, only used for testing purposes now -->
         <android.support.design.widget.FloatingActionButton
