--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -5,25 +5,30 @@
         <CheckBoxPreference
                 android:key="@string/settings_tag_analytics_enabled"
                 android:title="Enable Analytics"
+                android:summary="Enable usage statistics"
+                android:summaryOn="Usage statistics turned on"
+                android:summaryOff="Usage statistics turned off"
                 android:defaultValue="true"/>
         <EditTextPreference
                 android:dependency="@string/settings_tag_analytics_interval"
                 android:key="analytics_polling_interval"
                 android:title="Analytics Polling Interval"
-                android:summary="How many of the events are being sent"
+                android:summary="Percentage of user events to track"
                 android:entries="@array/polling_intervals"
                 android:defaultValue="50"/>
     </PreferenceCategory>
     <PreferenceCategory
-            android:title="Debug">
+            android:title="Debug"
+            android:summary="Settings to debug the application">
         <CheckBoxPreference
                 android:key="@string/debug_date_enabled"
                 android:title="Debug event dates"
-                android:summary="Change the dates so that they will correspond to our dates"
+                android:summary="Change events dates to our current date so we can debug timed notifications as well as show upcoming"
                 android:defaultValue="false"/>
         <ListPreference
                 android:key="@string/debug_date_setting"
-                android:title="Day to offset events by"
+                android:title="Debug date offset"
+                android:summary="Amount of days to offset events"
                 android:entries="@array/debug_days_to_add_v"
                 android:entryValues="@array/debug_days_to_add"
                 android:defaultValue="0"
@@ -31,7 +36,7 @@
         <CheckBoxPreference
                 android:key="@string/debug_notifications_schedule"
                 android:title="Schedule notifications for testing"
-                android:summary="Schedules a notification in the near future for testing"
+                android:summary="Schedules a notification in the near future for testing instead of actual event time"
                 android:defaultValue="false"/>
     </PreferenceCategory>
 </PreferenceScreen>
