Eurofurence in menu is now changed to external to indicate it will open browser
#56

--- a/app/src/main/res/menu/activity_root_drawer.xml
+++ b/app/src/main/res/menu/activity_root_drawer.xml
@@ -29,7 +29,7 @@
                 android:visible="false"/>
     </group>
 
-    <item android:title="Eurofurence">
+    <item android:title="External">
         <menu>
             <item android:id="@+id/navWebSite"
                   android:title="Website"
