Added upcoming events to the home screen. Right now it shows all events that are upcoming and currently happening though

--- a/app/src/main/res/layout/fview_home.xml
+++ b/app/src/main/res/layout/fview_home.xml
@@ -9,6 +9,15 @@
                       android:orientation="vertical"
                       android:layout_width="match_parent"
                       android:layout_height="match_parent">
+            <TextView android:layout_width="match_parent" android:layout_height="match_parent"
+                      android:text="Upcoming Events"
+                      android:padding="@dimen/inner_padding"
+                      android:textAppearance="?android:textAppearanceLarge"/>
+            <LinearLayout android:layout_width="match_parent"
+                      android:layout_height="wrap_content"
+                      android:id="@+id/upcomingEventRecycler">
+
+            </LinearLayout>
             <TextView android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:id="@+id/favoritedTitle"
