Currently happening events are now also shown on home screen

--- a/app/src/main/res/layout/fview_home.xml
+++ b/app/src/main/res/layout/fview_home.xml
@@ -11,11 +11,19 @@
                       android:layout_height="match_parent">
             <TextView android:layout_width="match_parent" android:layout_height="match_parent"
                       android:text="Upcoming Events"
-                      android:padding="@dimen/inner_padding"
+                      android:padding="@dimen/outer_padding"
                       android:textAppearance="?android:textAppearanceLarge"/>
             <LinearLayout android:layout_width="match_parent"
-                      android:layout_height="wrap_content"
-                      android:id="@+id/upcomingEventRecycler">
+                          android:layout_height="wrap_content"
+                          android:id="@+id/upcomingEventRecycler" android:orientation="horizontal">
+
+            </LinearLayout>
+            <TextView android:layout_width="match_parent"
+                      android:layout_height="match_parent"
+                      android:text="Current Event"/>
+            <LinearLayout android:layout_width="match_parent"
+                          android:layout_height="wrap_content"
+                          android:id="@+id/currentEventsRecycler">
 
             </LinearLayout>
             <TextView android:layout_width="match_parent"
