--- a/app/src/main/res/layout/fview_home.xml
+++ b/app/src/main/res/layout/fview_home.xml
@@ -20,10 +20,13 @@
             </LinearLayout>
             <TextView android:layout_width="match_parent"
                       android:layout_height="match_parent"
-                      android:text="Current Event"/>
+                      android:text="Current Event"
+                      android:padding="@dimen/outer_padding"
+                      android:textAppearance="?android:textAppearanceLarge"/>
             <LinearLayout android:layout_width="match_parent"
                           android:layout_height="wrap_content"
-                          android:id="@+id/currentEventsRecycler">
+                          android:id="@+id/currentEventsRecycler"
+                          android:orientation="horizontal">
 
             </LinearLayout>
             <TextView android:layout_width="match_parent"
@@ -44,13 +47,12 @@
                       android:id="@+id/announcementsTitle"
                       android:padding="@dimen/outer_padding"
                       android:textAppearance="?android:textAppearanceLarge"/>
-            <ScrollView android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="@color/cardview_light_background">
-                <android.support.v7.widget.RecyclerView android:layout_width="match_parent"
-                                                        android:layout_height="match_parent"
-                                                        android:id="@+id/announcementsRecycler"/>
-            </ScrollView>
+
+            <android.support.v7.widget.RecyclerView android:layout_width="match_parent"
+                                                    android:layout_height="match_parent"
+                                                    android:background="@color/cardview_light_background"
+                                                    android:id="@+id/announcementsRecycler"/>
+
         </LinearLayout>
     </ScrollView>
 </RelativeLayout>
