--- a/app/src/main/res/layout/fview_home.xml
+++ b/app/src/main/res/layout/fview_home.xml
@@ -9,37 +9,18 @@
                       android:orientation="vertical"
                       android:layout_width="match_parent"
                       android:layout_height="match_parent">
-            <TextView android:layout_width="match_parent" android:layout_height="match_parent"
-                      android:text="Upcoming Events"
-                      android:padding="@dimen/outer_padding"
-                      android:textAppearance="?android:textAppearanceLarge"/>
             <LinearLayout android:layout_width="match_parent"
                           android:layout_height="wrap_content"
-                          android:id="@+id/upcomingEventRecycler" android:orientation="horizontal">
-
-            </LinearLayout>
-            <TextView android:layout_width="match_parent"
-                      android:layout_height="match_parent"
-                      android:text="Current Event"
-                      android:padding="@dimen/outer_padding"
-                      android:textAppearance="?android:textAppearanceLarge"/>
+                          android:id="@+id/upcomingEventRecycler"
+                          android:orientation="horizontal"/>
             <LinearLayout android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:id="@+id/currentEventsRecycler"
-                          android:orientation="horizontal">
-
-            </LinearLayout>
-            <TextView android:layout_width="match_parent"
-                      android:layout_height="wrap_content"
-                      android:id="@+id/favoritedTitle"
-                      android:text="Your favourited events"
-                      android:padding="@dimen/outer_padding"
-                      android:textAppearance="?android:textAppearanceLarge"/>
-            <android.support.v4.view.ViewPager android:layout_width="match_parent"
-                                               android:layout_height="wrap_content"
-                                               android:id="@+id/favoritedViewPager">
-
-            </android.support.v4.view.ViewPager>
+                          android:orientation="horizontal"/>
+            <LinearLayout android:layout_width="match_parent"
+                          android:layout_height="wrap_content"
+                          android:id="@+id/favouritedEventsRecycler"
+                          android:orientation="horizontal"/>
 
             <TextView android:layout_width="match_parent"
                       android:layout_height="wrap_content"
