--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -21,4 +21,8 @@
         <item>Export To Calendar</item>
         <item>Share</item>
     </string-array>
+    <string-array name="dealer_options">
+        <item>Save to notes</item>
+        <item>Share</item>
+    </string-array>
 </resources>
