--- a/app/src/main/res/layout/fview_dealer.xml
+++ b/app/src/main/res/layout/fview_dealer.xml
@@ -12,10 +12,11 @@
                         android:background="@color/cardview_light_background"
                         android:clickable="true">
             <ImageView android:layout_width="match_parent"
-                       android:layout_height="wrap_content"
+                       android:layout_height="300dp"
                        android:id="@+id/dealerImage"
                        android:adjustViewBounds="true"
-                       android:scaleType="centerCrop"/>
+                       android:scaleType="fitCenter"
+                       android:background="@drawable/image_fade"/>
             <LinearLayout android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:layout_below="@id/dealerImage"
