--- a/app/src/main/res/drawable/image_fade.xml
+++ b/app/src/main/res/drawable/image_fade.xml
@@ -3,9 +3,6 @@
     <gradient
             android:type="linear"
             android:angle="270"
-            android:centerX="0%"
-            android:centerY="0%"
             android:startColor="@color/primary"
-            android:endColor="@color/primaryDarker"
-            android:gradientRadius="80%"/>
+            android:endColor="@color/primaryDarker"/>
 </shape>
