Reworked the dealers index page!

--- a/app/src/main/res/layout/fview_dealers.xml
+++ b/app/src/main/res/layout/fview_dealers.xml
@@ -2,13 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent"
+              android:background="@color/backgroundGrey">
 
     <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/dealersSearch"
-            android:padding="@dimen/outer_padding"/>
+            android:padding="@dimen/outer_padding"
+            android:visibility="gone"/>
     <android.support.v7.widget.RecyclerView android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:id="@+id/dealersRecycler"/>
