--- a/app/src/main/res/layout/fragment_dealer.xml
+++ b/app/src/main/res/layout/fragment_dealer.xml
@@ -1,22 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="75dp"
-                android:id="@+id/layout"
-                android:clickable="true"
-                android:longClickable="true">
-    <TextView android:layout_width="wrap_content"
-              android:layout_height="match_parent"
-              android:id="@+id/dealerName"
-              android:textAppearance="?android:textAppearanceLarge"
-              android:padding="@dimen/inner_padding"
-              android:text="Dealer name"
-              android:gravity="center"/>
-
-    <ImageView android:layout_width="75dp" android:layout_height="match_parent"
-               android:scaleType="centerCrop"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:orientation="horizontal"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:id="@+id/layout"
+              android:clickable="true"
+              android:longClickable="true"
+              android:background="@color/cardview_light_background">
+    <ImageView android:layout_width="75dp"
+               android:layout_height="75dp"
+               android:scaleType="fitCenter"
                android:id="@+id/dealerPreviewImage"
-               android:foregroundGravity="right" android:layout_alignParentTop="true"
-               android:layout_alignParentEnd="true"/>
-</RelativeLayout>
+               android:foregroundGravity="right"
+               android:padding="5dp"
+               android:src="@drawable/placeholder_event"/>
+    <LinearLayout android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
+                  android:padding="@dimen/inner_padding"
+                  android:orientation="vertical">
+        <TextView android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
+                  android:id="@+id/dealerName"
+                  android:textAppearance="?android:textAppearanceLarge"
+                  android:text="Dealer name"/>
+        <TextView android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
+                  android:text="tiny description"
+                  android:id="@+id/dealerSubText"
+                  android:textAppearance="?android:textAppearanceSmall"/>
+    </LinearLayout>
+</LinearLayout>
